--- a/rex.css
+++ b/rex.css
@@ -5,13 +5,29 @@ body {
 }
 
 #banner{
-        background-image:url("Iphone.png");
-        
+        background-image:url("banner.jpg");
+        width:100%;
+        height:auto;
+        background-size:cover;
         font-weight:bold;
         font-size:130%;
-                
+        
         background-position: 50% 50%;
         background-repeat: no-repeat;
         background-attachment: fixed;
-      
 }
+
+
+#last{
+        background-image:url("blue.jpg");
+        width:100%;
+        height:auto;
+        background-size:cover;
+        font-weight:bold;
+        font-size:130%;
+        
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+}
+
