--- a/rex.css
+++ b/rex.css
@@ -17,3 +17,17 @@ body {
         background-attachment: fixed;
 }
 
+#last{
+        background-image:url("blue.jpg");
+        width:100%;
+        height:auto;
+        background-size:cover;
+        font-weight:bold;
+        font-size:130%;
+        
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+}
+
+
