--- a/rex.css
+++ b/rex.css
@@ -5,7 +5,7 @@ body {
 }
 
 #banner{
-        background-image:url("banner.jpg");
+        background-image:url("banner1.jpg");
         width:100%;
         height:auto;
         background-size:cover;
